add /heating/profile endpoint
